<resources>
    <string name="app_name">BISA Merchant</string>
    <string name="title_menu_1">Simplify Financial Management</string>
    <string name="title_menu_2">Create QR Codes Easily</string>
    <string name="title_menu_3">Always Secure</string>
    <string name="desc_menu_1">No more hassle with complicated financial records, BISA will make it easy for you to plan and control your merchant\'s finances!</string>
    <string name="desc_menu_2">With just a few clicks, you can create QR codes that can be used for various purposes, such as payments or orders!</string>
    <string name="desc_menu_3">User data security is our top priority. You can use BISA with peace of mind, knowing that your personal data won\'t be stolen or misused!</string>
    <string name="get_started">Get Started</string>
    <string name="logo">Logo</string>
    <string name="onboarding_1">Onboarding 1</string>
    <string name="onboarding_2">Onboarding 2</string>
    <string name="onboarding_3">Onboarding 3</string>
    <string name="login_logo">BISA Logo</string>
    <string name="login_illustration">Login Illustration</string>
    <string name="login_email">Email</string>
    <string name="login_help_email">Enter Email</string>
    <string name="login_password">Password</string>
    <string name="login_help_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="create_account_intro">Don\'t have an account?</string>
    <string name="create_account">Sign Up</string>
    <string name="login_intro">Already have an account?</string>
    <string name="login_button">Login</string>
    <string name="term_policy"><![CDATA[Email will be used as your ID and to keep your account secure. By continuing, you agree with the]]></string>
    <string name="notification_menu">Notification Menu</string>
    <string name="setting_menu">Setting Menu</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="tab_text_1">Transaction</string>
    <string name="tab_text_2">Payment</string>
    <string name="tab_text_3">Withdraw</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="amount">Amount</string>
    <string name="bank_name">Bank Name</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="withdraw">Withdraw</string>
    <string name="qr_label_text">For faster transaction process</string>
    <string name="qr_title_text">Use Dynamic QR</string>
    <string name="scan_qr_customer">Scan QR</string>
    <string name="create_qr">Create QR</string>
    <string name="total_daily_transactions">Total Daily Transactions</string>
    <string name="date_zero">Thu, Jan 01, 1970</string>
    <string name="rupiah">Rp</string>
    <string name="cash_out">Cash Out</string>
    <string name="transaction_date_example">01 May 2023 – 08:18</string>
    <string name="transaction_out_amount_example">- Rp261.000</string>
    <string name="transaction_in_amount_example">Rp245.000</string>
    <string name="cash_in">Cash In</string>
    <string name="money_zero">0</string>
    <string name="balance">Balance</string>
    <string name="bisa_store"> </string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="icon_qr">Icon QR</string>
    <string name="icon_transaction_in">Icon Transaction In</string>
    <string name="icon_transaction_out">Icon Transaction Out</string>
    <string name="qr_image">QR Image</string>
    <string name="email_example">email@store.id</string>
    <string name="address_example">Samarinda</string>
    <string name="bronze_merchant">Bronze Merchant</string>
    <string name="silver_merchant">Silver Merchant</string>
    <string name="gold_merchant">Gold Merchant</string>
    <string name="benefits1">Benefits 1</string>
    <string name="benefits2">Benefits 2</string>
    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>
    <string name="gold">Gold</string>
    <string name="update_profil_floating_action_button">Update Profil Floating Action Button</string>
    <string name="update_profile">Update Profile</string>
    <string name="loyalty_count_bronze">0</string>
    <string name="loyalty_target_silver">100</string>
    <string name="loyalty_target_gold">200</string>
    <string name="bronze_merchant_benefits">Bronze Merchant Benefits</string>
    <string name="silver_merchant_benefits">Silver Merchant Benefits</string>
    <string name="gold_merchant_benefits">Gold Merchant Benefits</string>
    <string name="bronze_benefits_1">Limit for receiving money and withdrawing balances per month is up to \nRp5.000.000</string>
    <string name="bronze_benefits_2">Free Withdrawal Fees</string>
    <string name="silver_benefits_1">Additional limits for receiving money and withdrawing balances per month up to \nRp170.000.000</string>
    <string name="silver_benefits_2">0.7% Withdrawal Fees</string>
    <string name="gold_benefits_1">Additional limits for receiving money and withdrawing balances per month up to \nRp200.000.000</string>
    <string name="gold_benefits_2">0.7% Withdrawal Fees</string>
    <string name="minimarket">Minimarket</string>
    <string name="pin_title">Enter your account PIN to continue</string>
    <string name="share">Share</string>
    <string name="share_action">Share</string>
    <string name="faq">FAQ</string>
    <string name="version">v1.0</string>
    <string name="logout">Logout</string>
    <string name="faq_title_1">How to withdraw BISA Merchant balance to a bank account?</string>
    <string name="faq_body_1">To withdraw BISA Merchant balance to a bank account, you can follow these steps:</string>
    <string name="faq_body_5">Bisa Merchant provides various promotional and marketing programs to help increase your business exposure, such as referral programs, cashback, and special promotions for Bisa users.\n\nHowever, for promotional collaborations with Bisa, you need to contact the Bisa Merchant support team and submit a desired promotional collaboration proposal. The Bisa Merchant team will review your proposal and provide a response.\n\nMake sure to prepare a well-structured collaboration proposal that meets the requirements set by Bisa Merchant, and explain the expected benefits and advantages of the collaboration. Feel free to contact the Bisa Merchant support team if you need assistance or further information regarding promotional collaborations with Bisa Merchant.</string>
    <string name="faq_title_5">Collaborating on promotions with BISA?</string>
    <string name="faq_body_4">No, merchant balance transfers from Bisa Merchant can only be made to a bank account in your name as the account owner. This is to ensure security and prevent unauthorized use of the account.\n\nMake sure you have entered correct and valid bank account information in the Bisa Merchant system and always double-check transaction details before transferring the balance to your bank account for security and smooth transaction process. If you encounter any issues or have further questions, do not hesitate to contact the Bisa Merchant support team.</string>
    <string name="faq_title_4">Can I transfer my merchant balance to someone else\'s bank account?</string>
    <string name="faq_body_3">Yes, you can receive payments from other applications when you become a merchant on Bisa Merchant. However, ensure that the application supports integration with Bisa Merchant as one of the payment options.\n\nTo enable payment acceptance from other applications, you need to enter your bank account details into the Bisa Merchant system and activate the payment option according to the instructions provided by Bisa Merchant.\n\nMake sure to check the compatibility and requirements of the other application you want to use for accepting payments, and ensure that the information provided in the Bisa Merchant system is accurate and correct for a smooth payment acceptance process. If you encounter any difficulties, feel free to contact the Bisa Merchant support team for assistance and further information.</string>
    <string name="faq_title_3">Can I receive payments from other applications?</string>
    <string name="faq_body_2">The approval process for a merchant account in Bisa Merchant usually takes one to two business days to review and approve new merchant accounts. However, this time may vary depending on various factors such as the volume of applications to be processed by the Bisa Merchant team and the completeness of the documents you provide.\n\nEnsure that you have completed all the required documents and information requested by Bisa Merchant, and meet the requirements set to become a merchant. This will expedite the approval process of your account.\n\nIf you experience any delays in the account approval process, do not hesitate to contact the Bisa Merchant support team for assistance and further information.</string>
    <string name="faq_title_2">How long does the approval process for my merchant account take?</string>
    <string name="faq_body_1_2">1. Log in to your BISA Merchant account and select the \'Withdraw\' menu.</string>
    <string name="faq_body_1_3">2. Enter the amount and bank account information such as the bank name and account number.</string>
    <string name="faq_body_1_4">3. After the information has been verified, click the \'Withdraw\' button and wait for the withdrawal process to complete.</string>
    <string name="faq_body_1_5">The balance will be directly transferred to the bank account you selected.</string>
    <string name="faq_body_1_6">Make sure you meet the withdrawal requirements set by BISA Merchant to ensure a smooth withdrawal process. If you encounter any issues or difficulties in withdrawing the balance, feel free to contact the BISA Merchant support team for further assistance.</string>
    <string name="faq_content_description">Show FAQ Detail Button</string>
    <string name="see_all">See All</string>
    <string name="no_transaction_today">No transactions today</string>
    <string name="rp">Rp%1$s</string>
    <string name="minus_rp">- Rp%1$s</string>
    <string name="payment">Payment</string>
    <string name="share_qr">Share QR</string>
    <string name="terjadi_kesalahan">An error occurred</string>
    <string name="transaksi_berhasil">Transaction successful</string>
    <string name="uang_tidak_cukup">Insufficient money</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="max_5mb">Max. 5MB</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pin">PIN</string>
    <string name="syarat_amp_ketentuan"><![CDATA[Terms & Conditions]]></string>
    <string name="serta">and</string>
    <string name="kebijakan_privasi">Privacy Policy</string>
    <string name="kami">we</string>
    <string name="nomor_rekening">Account Number</string>
    <string name="account_no_example">1682955491721</string>
    <string name="merchant_id_example">2eqwdszxdgerdfgh</string>
    <string name="id_merchant">Merchant ID</string>
    <string name="id_customer">Customer ID</string>
    <string name="payer_id_example">ju89xkia0kxo92u17</string>
    <string name="nama_bank">Bank Name</string>
    <string name="bca">BCA</string>
    <string name="jenis_transaksi">Transaction Type</string>
    <string name="id_transaksi">Transaction ID</string>
    <string name="_2r6a1wk83jcoufq0ubwd">2R6a1WK83JCOUfQ0UbWd</string>
    <string name="date_example">May 01, 2023 – 08:18</string>
    <string name="total">Total</string>
    <string name="rp65_000">Rp65,000</string>
</resources>